<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/menu_act_refresh"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/navdrawer_item_refresh" />

        <item
            android:id="@+id/menu_add"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/navdrawer_item_add" />

        <item
            android:id="@+id/menu_act_installed"
            android:icon="@drawable/ic_system_update_alt_white_24dp"
            android:title="@string/installed" />

        <item
            android:id="@+id/menu_wishlist"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/navdrawer_item_wishlist" />

        <item
            android:id="@+id/menu_act_tags"
            android:icon="@drawable/ic_label_white_24px"
            android:title="@string/tags"></item>

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/navdrawer_item_settings" />

    </group>
</menu>