<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_watch_toggle"
        app:showAsAction="ifRoom"
        android:title="@string/menu_add"
        android:icon="@drawable/ic_toolbar_watch" />

    <item
        android:id="@+id/menu_tag_app"
        app:showAsAction="ifRoom"
        android:title="@string/tag"
        android:icon="@drawable/ic_label_white_24px">

        <menu>
            <group
                android:id="@+id/menu_group_tags"
                android:checkableBehavior="all" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_share"
        app:showAsAction="ifRoom"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_24dp" />

    <item
        android:id="@+id/menu_open"
        app:showAsAction="ifRoom"
        android:title="@string/open"
        android:icon="@drawable/ic_open_in_new_white_24dp" />

    <item
        android:id="@+id/menu_uninstall"
        app:showAsAction="ifRoom"
        android:title="@string/uninstall"
        android:icon="@drawable/ic_delete_white_24dp" />

    <item
        android:id="@+id/menu_app_info"
        app:showAsAction="never"
        android:title="@string/app_info" />

</menu>