<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appwatcher="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_act_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/menu_filter"
        appwatcher:actionViewClass="androidx.appcompat.widget.SearchView"
        appwatcher:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_act_select"
        android:icon="@drawable/ic_baseline_ballot_24"
        android:title="@string/import_mode"
        appwatcher:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_act_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort"
        appwatcher:showAsAction="ifRoom" />

</menu>