<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSecondary"
    android:paddingStart="24dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/app_name"
        android:singleLine="true"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/account_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:focusable="true"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableEndCompat="@drawable/ic_drawer_accounts_expand"
            android:gravity="center_vertical"
            android:text="@string/choose_an_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_update" />

    </LinearLayout>
</FrameLayout>