<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground"
    android:focusable="true">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/application_icon"
        android:src="@drawable/ic_app_icon_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Car Widget Pro" />

    <TextView
        android:id="@+id/creator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="4dp"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceCaption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/updated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creator"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@id/creator" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/free"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/updated"
        app:layout_constraintTop_toBottomOf="@id/creator" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorItemLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/updated"
        app:layout_constraintTop_toBottomOf="@+id/updated" />

</androidx.constraintlayout.widget.ConstraintLayout>